cabal-version:       3.0

name:                nng-haskell
version:             0.3.4
synopsis:
  Bindings to the NNG library
description:
  This is a Haskell binding for the NNG library: <http://nng.nanomsg.org/>.
  .
  There's support for (evented) blocking send and recv, a non-blocking receive,
  and for all the socket types and the functions you need to wire
  them up and tear them down again.
  .
  Most sockets options are available through accessor and mutator
  functions. Sockets are typed, transports are not.

homepage:            https://github.com/jimenezrick/nng-haskell
license:             MIT
license-file:        LICENSE
author:              Ivar Nymoen, Ben Gamari
maintainer:          Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:           Copyright (c) 2013 the nanomsg-haskell authors
category:            Network
tested-with:
  GHC == 9.2.5
extra-source-files:
  README.md,
  CONTRIBUTORS,
  changelog,
  tests/*.hs,
  benchmarks/*.hs

library
  hs-source-dirs:    src
  ghc-options:       -O2 -Wall
  default-language:  Haskell2010
  exposed-modules:
    Nanomsg,
    Nanomsg.Binary
  includes:          nanomsg/nn.h
  extra-libraries:   nng
  build-depends:
    base >= 4.5 && < 5,
    bytestring >= 0.10.0,
    binary >= 0.7

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Driver.hs
  ghc-options:       -O2 -Wall -threaded
  default-language:  Haskell2010
  other-modules:
    BinaryProperties,
    Properties
  build-depends:
    base >= 4.5 && < 5,
    bytestring >= 0.10.0,
    nng-haskell,
    QuickCheck,
    tasty,
    tasty-quickcheck
  build-tool-depends:
    tasty-discover:tasty-discover

source-repository head
  type:              git
  location:          https://github.com/jimenezrick/nng-haskell

benchmark send-messages
  type:              exitcode-stdio-1.0
  main-is:           SendMessages.hs
  ghc-options:       -O2 -Wall
  default-language:  Haskell2010
  hs-source-dirs:    benchmarks
  build-depends:
    base >= 4.5 && < 5,
    bytestring >= 0.10.0,
    nng-haskell,
    criterion

benchmark vs-zeromq-bindings
  type:              exitcode-stdio-1.0
  main-is:           Zmq.hs
  ghc-options:       -O2 -Wall -fwarn-tabs -threaded "-with-rtsopts=-N" -rtsopts
  default-language:  Haskell2010
  hs-source-dirs:    benchmarks
  build-depends:
    base >= 4.5 && < 5,
    bytestring >= 0.10.0,
    nng-haskell,
    zeromq4-haskell,
    criterion
